# Chess

./: .gitmodules  ideas.txt
game/: CMakeLists.txt  annotate_check.cpp  annotate_check.h  bindings.cpp  bit_ops.cpp  bit_ops.h  bitboard.cpp  bitboard.h  cases.cpp  constants.cpp  constants.h  legal_king_moves.cpp  legal_king_moves.h  legal_moves.cpp  legal_moves.h  main.cpp  move.cpp  move.h  move_map.cpp  move_map.h  pinned.cpp  pinned.h  possible_piece_moves.cpp  possible_piece_moves.h  turn.cpp  turn.h  utils.cpp  utils.h
kernels/conversion/add_scalar/: add_scalar_4d.cpp  add_scalar_4d.cu  add_scalar_4d.py  setup.py
kernels/conversion/add_scalar/add_scalar_4d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/batch_norm/: batch_norm_api.cpp  batch_norm_cuda.cu  batch_norm_cuda.py  setup.py
kernels/conversion/batch_norm/batch_norm_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/batch_norm/my_extension.egg-info/: PKG-INFO  SOURCES.txt
kernels/conversion/conv4d/: conv4d.cu  conv4d.py  conv4d_api.cpp  setup.py
kernels/conversion/conv4d/conv4d_cpp.egg-info/: PKG-INFO  SOURCES.txt
kernels/conversion/cross_entropy_loss/: cross_entropy_loss.cu  cross_entropy_loss_api.cpp  setup.py
kernels/conversion/cross_entropy_loss/cross_entropy_loss_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/mse_loss/: mse_loss.cu  mse_loss.py  mse_loss_api.cpp  setup.py
kernels/conversion/mse_loss/mse_loss_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/relu2d/: relu2d.cu  relu2d.py  relu2d_api.cpp  setup.py
kernels/conversion/relu2d/relu2d_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/relu4d/: relu4d.cu  relu4d.py  relu4d_api.cpp  setup.py
kernels/conversion/relu4d/relu4d_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/conversion/softmax/: setup.py  softmax.cu  softmax.py  softmax_api.cpp
kernels/conversion/softmax/softmax_cuda.egg-info/: PKG-INFO  SOURCES.txt
models/: CMakeCache.txt
models/AlphaGoZero/: batch_norm_layer.py  index_to_move.pyd  index_to_move.txt  main.py  maps.py  mcts.py  mse_loss.py  net.py  relu2d.py  train_net.py
models/PureCNN/: conv4d.py  cross_entropy_loss.py  main.py  net.py  relu4d.py  train_net.py
models/mapping/: CMakeCache.txt  CMakeLists.txt  ChessModels.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  index_to_move.cpp  index_to_move.h  mcts_module.vcxproj  mcts_module.vcxproj.filters  model_trainer.vcxproj  model_trainer.vcxproj.filters
